<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_view"
        android:layout_width="@dimen/text_padding"
        android:layout_height="50dip"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/zero"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/clear"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/clear_everything_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/clear_everything"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/sign_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/sign"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/divide_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="3"
        android:layout_row="1"
        android:text="@string/divide"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num7_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/seven"
        android:textSize="@dimen/button_font_size"/>



    <Button
        android:id="@+id/num8_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/eight"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num9_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/nine"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="3"
        android:layout_row="2"
        android:text="@string/add"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num4_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/four"
        android:textSize="@dimen/button_font_size"/>


    <Button
        android:id="@+id/num5_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/five"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num6_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/six"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/subtract_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="3"
        android:layout_row="3"
        android:text="@string/subtract"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num1_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/one"
        android:textSize="@dimen/button_font_size"/>


    <Button
        android:id="@+id/num2_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/two"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num3_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/three"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="3"
        android:layout_row="4"
        android:text="@string/multiply"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/num0_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/zero"
        android:textSize="@dimen/button_font_size"/>


    <Button
        android:id="@+id/decimal_button"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/point"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:id="@+id/equals_button"
        android:layout_width="@dimen/large_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_margin="@dimen/margin"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:text="@string/equal"
        android:textSize="@dimen/button_font_size"/>

</GridLayout>